# ai-cowatcher

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai_cowatcher/: __init__.py  config.py  domain.py  health.py  interfaces.py  main.py
ai_cowatcher/agent/: completion.py  conversation_agent.py  metrics.py  prompts.py  tier_routing.py  token_usage.py  tools.py
ai_cowatcher/api/: ask_routes.py  catalog_routes.py  metrics_routes.py  navigate_routes.py  routes.py  schemas.py  watch_routes.py
ai_cowatcher/db/: base.py  models.py
ai_cowatcher/enrichment/: __init__.py  graph.py  identity.py  naming.py  relationships.py
ai_cowatcher/ingestion/: catalog.py  cli.py  diarization.py  event_detection.py  knowledge_cli.py  knowledge_index.py  pipeline.py  transcription.py  worker_cli.py
ai_cowatcher/messaging/: __init__.py  base.py  consumer_worker.py  events.py  factory.py  kafka.py  memory.py  publisher.py  rabbitmq.py
ai_cowatcher/navigation/: __init__.py  ordinal.py  resolver.py  time_parse.py
ai_cowatcher/observability/: ask_telemetry.py  prometheus_metrics.py  queue_depth.py  summarize_logs.py
ai_cowatcher/providers/: factory.py  litellm_env.py  mock.py  real.py
ai_cowatcher/realtime/: navigation_session.py  viewing_session.py
ai_cowatcher/retrieval/: cast_lookup.py  character_lookup.py  event_lookup.py  knowledge_search.py  scene_lookup.py  scene_navigate.py  user_memory.py
ai_cowatcher/storage/: character_store.py  postgres_store.py  qdrant_knowledge_store.py  qdrant_store.py  user_memory_store.py
ai_cowatcher/web/: __init__.py  streaming.py  watch.html
docs/: E2E_ARCHITECTURE.md  OBSERVABILITY.md
knowledge/: thriller-001.json
observability/grafana/dashboards/: cowatcher-pilot.json
observability/grafana/provisioning/dashboards/: dashboard.yml
observability/prometheus/: prometheus.yml
tests/: conftest.py  test_ask_flow.py  test_ask_performance.py  test_character_graph.py  test_character_lookup_flow.py  test_ingest_api.py  test_ingest_messaging.py  test_ingestion_pipeline.py  test_knowledge_search.py  test_navigate_api.py  test_navigation.py  test_observability.py  test_prometheus_metrics.py  test_scene_lookup.py  test_tier_routing.py  test_transcription.py  test_user_memory.py  test_watch.py
