[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cowatcher"
version = "0.1.0"
description = "Pay-TV co-watcher pilot — AI companion during playback"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.1.0",
    "opencv-python-headless==4.11.0.86",
    "scenedetect[opencv]==0.6.6",
    "faster-whisper==1.1.1",
    "insightface==0.7.3",
    "onnxruntime==1.24.4",
    "litellm==1.65.4",
    "FlagEmbedding==1.3.4",
    "transformers==4.46.3",
    "qdrant-client==1.13.3",
    "psycopg2-binary==2.9.12",
    "redis==5.2.1",
    "minio==7.2.15",
    "httpx==0.28.1",
    "sqlalchemy==2.0.51",
    "neo4j==6.2.0",
    "langgraph==1.2.8",
    "prometheus-client==0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.11.2",
]
rabbitmq = [
    "pika>=1.3,<2",
]
kafka = [
    "kafka-python>=2.0,<3",
]
# Speaker diarization pulls in torch; install explicitly for real (non-mock) ingest.
diarization = [
    "pyannote.audio>=3.1,<4.0",
]

[project.scripts]
cowatcher-api = "ai_cowatcher.main:run"
cowatcher-ingest = "ai_cowatcher.ingestion.cli:main"
cowatcher-ingest-worker = "ai_cowatcher.ingestion.worker_cli:main"
cowatcher-knowledge = "ai_cowatcher.ingestion.knowledge_cli:main"
cowatcher-metrics-lite = "ai_cowatcher.observability.summarize_logs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cowatcher*"]

[tool.setuptools.package-data]
ai_cowatcher = ["web/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
